fixing page gap

--- a/style.css
+++ b/style.css
@@ -32,13 +32,14 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
-  font-family: "Outfit", sans-serif;
   scroll-behavior: smooth;
+  font-family: "Outfit", sans-serif;
 }
 main {
   flex: 1;
 }
-h1, h2 {
+h1,
+h2 {
   font-weight: 400;
   font-family: "Young serif", serif;
 }
@@ -48,7 +49,10 @@ h1 {
 h2 {
   color: var(--Brown-800);
 }
-p, li, th, td {
+p,
+li,
+th,
+td {
   font-weight: 400;
   font-size: clamp(0.875rem, 2vw + 0.5rem, 1rem);
   color: var(--Stone-600);
@@ -61,7 +65,8 @@ ul {
     content: "•";
   }
 }
-ol, ul {
+ol,
+ul {
   li {
     padding-left: 1.2rem;
   }
@@ -120,7 +125,8 @@ article {
     }
   }
 }
-.instructions, .ingredients {
+.instructions,
+.ingredients {
   border-bottom: var(--border);
 }
 .nutritions {
@@ -134,7 +140,8 @@ article {
     tr:not(:last-child) {
       border-bottom: var(--border);
     }
-    th, td {
+    th,
+    td {
       padding: 1.1rem 0;
     }
     th {
@@ -157,16 +164,13 @@ article {
 
 @media (min-width: 44rem) {
   body {
+    gap: 10rem;
     background-color: var(--Stone-100);
-  }
-  header, footer {
-    flex: 1;
   }
   article {
     padding: 2rem;
     border-radius: 16px;
     img {
-      width: 100%;
       border-radius: 14px;
     }
   }
